--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <script src="./currency.js"></script>
-    <script src="./tesla.js"></script>
+    <script src="./MarketWatch.js"></script>
     <script src="./market.js"></script>
 </body>
 </html>
