skeleton of html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 
 </head>
 <body>
+    <header>
+        <h1>Ambience Market Watch and Currency Exchange</h1>
+    </header>
+    <section>
+        <div>for clocks</div>
+    </section>
+    <section>
+        <div>buttons</div>
+    </section>
+    <section>
+        <div>display</div>
+    </section>
     <script src="./currency.js"></script>
     <script src="./MarketWatch.js"></script>
     <script src="./market.js"></script>
