--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="col-md-12">
                     <div class="d-flex justify-content-between align-items-center breaking-news bg-white">
                         <div class="d-flex flex-row flex-grow-1 flex-fill justify-content-center bg-danger py-2 text-white px-1 news">
-                            <span class="d-flex align-items-center">&nbsp;CNN News</span>
+                            <span class="d-flex align-items-center">&nbsp;Yahoo Finance</span>
                         </div>
                         <marquee class="news-scroll" id="marqueeSelector" behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();"> 
                             <!--
