--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
         <div class="container">
             <div class="row">
               <div id="displayArea1"  class="col">
-                <button id="button1">Currency Converter</button>
-                <button id="SP500"> SP500 </button>
-                <button id="SPDR"> SPDR </button>
-                <button id="E-MINI"> E-MINI </button>
-                <button id="VANGUARD"> VANGAURD </button>
-                <button id="STPK"> STPK </button>
+                <button class= "button" id="button1">Currency Converter</button>
+                <button class ="button" id="SP500"> SP500 </button>
+                <button class ="button" id="SPDR"> SPDR </button>
+                <button class ="button" id="E-MINI"> E-MINI </button>
+                <button class ="button" id="VANGUARD"> VANGAURD </button>
+                <button class ="button" id="STPK"> STPK </button>
 
     
                 
