--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <!-- currency converter -->
     <section>
         <div class="container">
-            <div class="row">
-              <div id="displayArea1"  class="col">
+            <div class="row justify-content-between">
+              <div id="displayArea1"  class="col-5">
                   <div ></div>
                 <button id="button1">Currency Converter</button><br>
                 <button id="SP500"> SP500 </button><br>
@@ -70,7 +70,7 @@
             </div>
             
             
-            <div  id="displayArea" class="col">
+            <div  id="displayArea" class="col-6">
                 <p></p>
 
                 <div id="container"></div> 
@@ -84,6 +84,74 @@
                 <div id="FEXRdivResp" data-pym-src="//www.foreignexchangeresource.com/currency-converter.php?c=EUR&a=USD&amt=1&panel=1&button=2"></div>
     </section>
    
+   <section>
+       <!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+    <div id="tradingview_3e938"></div>
+    <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/AMEX-SPY/" rel="noopener" target="_blank"><span class="blue-text">SPY Chart</span></a> by TradingView</div>
+    <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+    <script type="text/javascript">
+    new TradingView.widget(
+    {
+    "width": 980,
+    "height": 610,
+    "symbol": "AMEX:SPY",
+    "interval": "D",
+    "timezone": "US/Mountain",
+    "theme": "light",
+    "style": "1",
+    "locale": "en",
+    "toolbar_bg": "#F1F3F6",
+    "enable_publishing": false,
+    "withdateranges": true,
+    "allow_symbol_change": true,
+    "container_id": "tradingview_3e938"
+  }
+    );
+    </script>
+  </div>
+   </section>
+
+<section>
+
+<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+    <div class="tradingview-widget-container__widget"></div>
+    <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/markets/cryptocurrencies/prices-all/" rel="noopener" target="_blank"><span class="blue-text">Cryptocurrency Markets</span></a> by TradingView</div>
+    <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-screener.js" async>
+    {
+    "width": 1000,
+    "height": 490,
+    "defaultColumn": "overview",
+    "screener_type": "crypto_mkt",
+    "displayCurrency": "USD",
+    "colorTheme": "light",
+    "locale": "en"
+  }
+    </script>
+  </div>
+
+</section>
+   
+<section>
+    <div class="clearfix">
+        <div class="card">
+          <h2>Sign Up For A Chance at a Free Coder Coin</h2>
+          <form method="POST">
+            <div class="input-group">
+              <label for="userName">User Name</label>
+              <input type="text" name="userName" id="userName" />
+            </div>
+            <div class="input-group">
+              <label for="password">Password</label>
+              <input type="password" name="password" id="password" />
+            </div>
+            <div id="msg"></div>
+            <button id="sign-up">Sign Up</button>
+          </form>
+        </div>
+</section>
+
     <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
     <script type="text/javascript" src="//www.foreignexchangeresource.com/js/pym.min.js"></script>
     <!-- JavaScript Bundle with Popper -->
