--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <script type="text/javascript">
     new TradingView.widget(
     {
-    "width": 980,
+    "width": 1000,
     "height": 610,
     "symbol": "AMEX:SPY",
     "interval": "D",
@@ -112,24 +112,26 @@
   </div>
    </section>
 
-<section>
+<section id="second-tradingview">
 
+<!-- TradingView Widget BEGIN -->
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
     <div class="tradingview-widget-container__widget"></div>
     <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/markets/cryptocurrencies/prices-all/" rel="noopener" target="_blank"><span class="blue-text">Cryptocurrency Markets</span></a> by TradingView</div>
     <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-screener.js" async>
     {
-    "width": 1000,
-    "height": 490,
-    "defaultColumn": "overview",
-    "screener_type": "crypto_mkt",
-    "displayCurrency": "USD",
-    "colorTheme": "light",
-    "locale": "en"
-  }
+    width: "1000";
+    height: "490";
+    defaultColumn: "overview";
+    screener_type: "crypto_mkt";
+    displayCurrency: "USD";
+    colorTheme: "light";
+    locale: "en";
+    }
     </script>
   </div>
+  <!-- TradingView Widget END -->
 
 </section>
    
