--- a/index.html
+++ b/index.html
@@ -115,23 +115,21 @@
 <section id="second-tradingview">
 
 <!-- TradingView Widget BEGIN -->
-<!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
     <div class="tradingview-widget-container__widget"></div>
     <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/markets/cryptocurrencies/prices-all/" rel="noopener" target="_blank"><span class="blue-text">Cryptocurrency Markets</span></a> by TradingView</div>
     <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-screener.js" async>
     {
-    width: "1000";
-    height: "490";
-    defaultColumn: "overview";
-    screener_type: "crypto_mkt";
-    displayCurrency: "USD";
-    colorTheme: "light";
-    locale: "en";
-    }
+    "width": 1000,
+    "height": 490,
+    "defaultColumn": "overview",
+    "screener_type": "crypto_mkt",
+    "displayCurrency": "USD",
+    "colorTheme": "light",
+    "locale": "en"
+  }
     </script>
   </div>
-  <!-- TradingView Widget END -->
 
 </section>
    
@@ -141,11 +139,11 @@
           <h2>Sign Up For A Chance at a Free Coder Coin</h2>
           <form method="POST">
             <div class="input-group">
-              <label for="userName">User Name</label>
+              <label id= "user" for="userName">User Name</label>
               <input type="text" name="userName" id="userName" />
             </div>
             <div class="input-group">
-              <label for="password">Password</label>
+              <label id="pass" for="password">Password</label>
               <input type="password" name="password" id="password" />
             </div>
             <div id="msg"></div>
